<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".KonversiSuhu">

    <TextView
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:autoSizeMaxTextSize="50sp"
        android:backgroundTint="#FF9800"
        android:paddingLeft="80dp"
        android:paddingRight="16dp"
        android:text="Konversi Celcius"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celcius" />

    <EditText
        android:id="@+id/edt_celcius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#723ECD"
        android:backgroundTint="#7542CF"
        android:text="@string/hitung" />



    <TextView
        android:id="@+id/tv_Farenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/farenheit"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_Reamur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reamur"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_Kelvin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kelvin"
        android:textSize="24sp"
        android:textStyle="bold" />





</LinearLayout>